--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -137,7 +137,7 @@
   }
   .btn:hover {
     transform: initial;
-    background: initial;
+    background: $secondary-color;
   }
   .section {
     padding: 0;
